--- a/01机器学习实战-第1章 机器学习基础.ipynb
+++ b/01机器学习实战-第1章 机器学习基础.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+ 主要来源自《机器学习实战》《机器学习》《利用Python进行数据分析》，还有一些网站资料\n",
+    "+ 主要来源自《机器学习实战》周志华-《机器学习》《利用Python进行数据分析》，还有一些网站资料\n",
     "\n",
     "\n",
     "# 机器学习基础   \n",
@@ -95,7 +95,7 @@
     "\n",
     "**训练过程**  \n",
     "\n",
-    "<img src=\"https://pic4.zhimg.com/80/v2-711466f238bbb969618e6fe669a16a4f_hd.jpg\",width=400,height=400>\n",
+    "![tu4](./image/Ch00/训练过程.jpg)\n",
     "\n",
     "\n",
     "**算法汇总**   \n",
@@ -128,7 +128,8 @@
     "2.需要收集或分析的数据是什么  \n",
     ">举例\n",
     "\n",
-    "<img src=\"https://pic3.zhimg.com/80/v2-88ee740c5e4a2a2bdab7e08043321e08_hd.jpg\",width=400,height=400>\n",
+    "![tu6](./image/Ch00/过程.jpg)\n",
+    "\n",
     "\n",
     ">机器学习开发流程\n",
     "\n",
@@ -144,6 +145,7 @@
     "\n",
     "**Python语言优势**\n",
     "\n",
+    "\n",
     "1. 可执行伪代码\n",
     "2. Python比较流行：使用广泛、代码范例多、丰富模块库，开发周期短\n",
     "3. Python语言的特色：清晰简练、易于理解\n",
@@ -155,6 +157,15 @@
     "\n",
     "+ 科学函数库：SciPy、NumPy（底层语言：C和Fortran）\n",
     "+  绘图工具库：Matplotlib\n",
+    "\n",
+    "\n",
+    "**奥卡姆剃刀（Occam's razor）：**若有多个假设与观察一致，则选最简单的那个。\n",
+    "\n",
+    "**NFL(No Free Lunch Theorem)：**没有免费的午餐定理。\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "### 科普\n",
@@ -195,7 +206,7 @@
    "toc_cell": true,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
